- updating diagram - cleanup - correction in readme - bumping up snappy version