@@ -8,12 +8,11 @@ archivesBaseName = 'snappy-poc'
 
 allprojects {
 
-  version = '1.1.1'
+  version = '1.2.0'
 
   repositories {
     mavenLocal()
     mavenCentral()
-    maven { url "http://mvnrepository.com/artifact" }
   }
 
   apply plugin: 'java'
@@ -24,8 +23,8 @@ allprojects {
   apply plugin: "com.commercehub.gradle.plugin.avro"
 
   ext {
-    sparkVersion = '2.1.1.7'
-    snappyVersion = '1.1.1'
+    sparkVersion = '2.1.1.8'
+    snappyVersion = '1.2.0'
   }
 
   configurations.all {
@@ -45,7 +44,6 @@ dependencies {
   compileOnly "io.snappydata:snappy-spark-core_2.11:${sparkVersion}"
   compileOnly "io.snappydata:snappy-spark-catalyst_2.11:${sparkVersion}"
   compileOnly "io.snappydata:snappy-spark-sql_2.11:${sparkVersion}"
-  // compileOnly "io.snappydata:snappydata-aqp_2.11:${snappyVersion}"
 
   compile 'org.apache.kafka:kafka-clients:0.10.0.1'
   compile 'org.apache.kafka:kafka_2.11:0.10.0.1'
@@ -65,7 +63,6 @@ compileJava.source(generateAvro.outputs)
 
 avro.stringType = "charSequence"
 
-
 ext {
   assemblyJar = rootProject.tasks.getByPath(':assembly:shadowJar').outputs
 }
@@ -74,21 +71,6 @@ def assemblyJar = tasks.getByPath(':assembly:shadowJar').outputs
 
 task generateAdImpressions(type: JavaExec, dependsOn: classes) {
   main = 'io.snappydata.adanalytics.KafkaAdImpressionProducer'
-  classpath sourceSets.test.runtimeClasspath
-  environment 'PROJECT_ASSEMBLY_JAR', assemblyJar.files.asPath
-}
-
-task aggeregateAdImpressions(type: JavaExec, dependsOn: classes) {
-  main = 'io.snappydata.adanalytics.SnappyLogAggregator'
-  jvmArgs = ['-XX:MaxPermSize=512m']
-  classpath sourceSets.test.runtimeClasspath
-  environment 'PROJECT_ASSEMBLY_JAR', assemblyJar.files.asPath
-}
-
-task startSnappyIngestionPerf_Kafka(type: JavaExec, dependsOn: classes) {
-  main = 'io.snappydata.benchmark.KafkaSnappyIngestionPerf'
-  jvmArgs = ['-XX:MaxPermSize=512m']
-  maxHeapSize = "8196m"
   classpath sourceSets.test.runtimeClasspath
   environment 'PROJECT_ASSEMBLY_JAR', assemblyJar.files.asPath
 }
